--- a/qtum/contrib/gitian-descriptors/gitian-win.yml
+++ b/qtum/contrib/gitian-descriptors/gitian-win.yml
@@ -24,12 +24,12 @@ packages:
 remotes:
 - "url": "https://github.com/btnproject/btn.git"
   "dir": "btn"
-- "url": "https://github.com/btnproject/cpp-eth-btn.git"
-  "dir": "cpp-eth-btn"
+- "url": "https://github.com/btnproject/cpp-eth-qtum.git"
+  "dir": "cpp-eth-qtum"
 files: []
 script: |
   #this is a hack since gitian has no natural support for submodules
-  cp -r cpp-eth-btn/* btn/src/cpp-ethereum
+  cp -r cpp-eth-qtum/* btn/src/cpp-ethereum
   #make sure this file exists... 
   cat btn/src/cpp-ethereum/utils/libscrypt/b64.c 
   
