--- a/src/qt/res/bitcoin-qt-res.rc
+++ b/src/qt/res/bitcoin-qt-res.rc
@@ -22,10 +22,10 @@ BEGIN
             VALUE "CompanyName",        "Btn"
             VALUE "FileDescription",    PACKAGE_NAME " (GUI node for Btn)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "btn-qt"
+            VALUE "InternalName",       "qtum-qt"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "btn-qt.exe"
+            VALUE "OriginalFilename",   "qtum-qt.exe"
             VALUE "ProductName",        PACKAGE_NAME
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
