--- a/share/qt/Info.plist
+++ b/share/qt/Info.plist
@@ -17,7 +17,7 @@
   <string>APPL</string>
 
   <key>CFBundleGetInfoString</key>
-  <string>0.14.15, Copyright © 2009-2017 The Btn Core developers</string>
+  <string>0.14.15, Copyright © 2009-2017 The BTN Core developers</string>
 
   <key>CFBundleShortVersionString</key>
   <string>0.14.15</string>
