--- a/src/qt/res/bitcoin-qt-res.rc
+++ b/src/qt/res/bitcoin-qt-res.rc
@@ -19,8 +19,8 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "Btn"
-            VALUE "FileDescription",    PACKAGE_NAME " (GUI node for Btn)"
+            VALUE "CompanyName",        "BTN"
+            VALUE "FileDescription",    PACKAGE_NAME " (GUI node for BTN)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "btn-qt"
             VALUE "LegalCopyright",     COPYRIGHT_STR
